<resources>
    <string name="app_name">SmartShoppinglist</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_group_tab">Group Tab</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login or Register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_password">Password is to short</string>
    <string name="error_incorrect_password">Wrong Password</string>
    <string name="error_field_required">Field should not be empty</string>
    <string name="cancel">Nein</string>
    <string name="yes">Ja</string>
    <string name="really_want_to_delete_all_marked_items">Delete marked items?"</string>
    <string name="group_name">"Group name"</string>
    <string name="list_name">"List name"</string>
    <string name="member">"Members"</string>
    <string name="save">"Save"</string>
    <string name="no_acount_yet">Don\'t have a account yet, create one</string>
    <string name="invalid_input">"Invalid input"</string>
    <string name="wrong_email_or_password">"Password or email is wrong"</string>
    <string name="local">"Local"</string>
    <string name="really_want_to_delete_shoppinglist">"Do you really want to delete this shopping list?"</string>
    <string name="home">"Home"</string>
    <string name="smart_shopping_list">"SmartShoppingList"</string>
    <string name="groups">"Groups"</string>
    <string name="recipes">"Recipe"</string>
    <string name="items">"Item"</string>
    <string name="shopping_lists">"Shopping list"</string>
    <string name="signup">"Register"</string>
    <string name="creating_acount">"Creating account"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="at_least_3_chars">"At least 3 characters"</string>
    <string name="invalid_email_address">"Invalid email address"</string>
    <string name="longer_than_4_alphanumeric_characters">"More than 4 characters"</string>
    <string name="create_account">Create account</string>
    <string name="already_a_member_login"> Already have a account? Login</string>
    <string name="password">Password</string>
    <string name="add">Add</string>
    <string name="create_new">create new</string>
    <string name="options">Options</string>
    <string name="not_implemented_yet">not implemented yet</string>
    <string name="search">Search</string>
    <string name="general">General</string>
    <string name="bought">Bought</string>
    <string name="stk">pc</string>
    <string name="shopping_list">Shopping list</string>
    <string name="item_name">Item Name</string>
    <string name="send">Send</string>
    <string name="email_does_not_exist">This email is not in use</string>
    <string name="email">Email</string>
    <string name="invites">Invites</string>
    <string name="ingredients">Ingredients</string>
    <string name="logout">Log out</string>
    <string name="language">Language</string>
    <string name="design">Design</string>
    <string name="reload">Reload</string>
    <string name="user">User</string>
    <string name="choose_language">Choose Language</string>
    <string name="alter">Alter</string>
    <string name="remove">Remove</string>
    <string name="this_category_con_not_be_altered">This category can not be altered</string>
    <string name="no_server_connection">No server connection</string>
</resources>
