<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_shoppinglsit"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/shopping_lists" />
        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/ic_group"
            android:title="@string/groups" />
        <item
            android:id="@+id/nav_recipe"
            android:icon="@drawable/ic_recipe"
            android:title="@string/recipes" />
        <item
            android:id="@+id/nav_item"
            android:icon="@drawable/ic_item"
            android:title="@string/items" />
        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/ic_message"
            android:title="@string/invites" />
    </group>


</menu>
