<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.SettingsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/settings_account"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <TextView
                android:text="@string/user"
                android:textSize="@dimen/default_text_size"
                android:textColor="@color/black_overlay"
                android:gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/settings_account_name"
                android:textSize="@dimen/default_subtext_size"
                android:gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_language"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TextView
                android:text="@string/language"
                android:textSize="@dimen/default_text_size"
                android:textColor="@color/black_overlay"
                android:gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/settings_language_type"
                android:textSize="@dimen/default_subtext_size"
                android:gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_logout"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TextView
                android:text="@string/logout"
                android:textSize="@dimen/default_text_size"
                android:textColor="@color/red"
                android:gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>